--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,5 +13,5 @@ android {
 }
 
 dependencies {
-    provided 'com.facebook.react:react-native:+'
+    implementation 'com.facebook.react:react-native:+'
 }
